--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,7 @@ nav h1 {
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 1%;
-    /* border: 1px solid #d15a5a;  */
+  
 }
 
 .init .data1{
@@ -43,13 +43,13 @@ nav h1 {
     display: flex;
     width: 100%;
     height: 100%;
-    /* border: 1px solid #d15a5a; */    
+   
 }
 
 .init .data1 .resume,
 .init .data2 .resume {
-    flex-grow: 1; /* Permite que as divs se expandam uniformemente */
-    flex-basis: 0; /* Redefine a largura base para 0 */
+    flex-grow: 1; 
+    flex-basis: 0; 
     border-radius: 10px;
     border: 1px solid #5ad15a;
     
@@ -57,7 +57,7 @@ nav h1 {
 
 .init .data1 .resume + .resume,
 .init .data2 .resume + .resume {
-    margin-left: 10px; /* Espaço entre as divs .resume */
+    margin-left: 10px; 
 }
 .init .data1 .resume .title{
     flex: 50%;
@@ -117,7 +117,7 @@ nav h1 {
 .chart1 #baseCountsByDate {
     flex: 50%;
     height: 100%;
-    margin-bottom: 10px; /* Adicione a margem inferior desejada entre os gráficos */
+    margin-bottom: 10px; 
 }
 
 #chart1 canvas {
@@ -136,7 +136,6 @@ nav h1 {
     margin-right: 10%;
     margin-bottom: 1%;
     color: #5ad15a;
-    /* border: 1px solid #d15a5a;  */
 }
 
 #chart2 {
@@ -192,13 +191,13 @@ nav h1 {
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 1%;
-    /* border: 1px solid #5ad15a;  */
+   
 }
 
 .data3 .resume1{
    
-    flex-grow: 2; /* Permite que as divs se expandam uniformemente */
-    flex-basis: 0; /* Redefine a largura base para 0 */
+    flex-grow: 2; 
+    flex-basis: 0; 
     border-radius: 10px;
     margin: 0.5%;
     border: 1px solid #5ad15a;
