--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,8 @@
             </div>
             <!-- Média Mensal -->
             <div class="resume">
-                <div class="title"> <h1>MÉDIA MENSAL</h1></div>
-                <h1 class="return"><%=data.totalMonthlyAverage %></h1>
+                <div class="title"> <h1>DISPERSÃO MÁXIMA</h1></div>
+                <h1 class="return"><%=data.stateDispersion %></h1>
             </div>
         </div>
         
